classDiagram
  class Arbitre {
    -int id
    -string nom
    -string prenom
    -string nationalite
    -string confederation
    -string categorie
    -int experience
    -string statut
    +getNomComplet() string
    +estDisponible() bool
    +suspendre() void
    +reactiver() void
    +ajouterExperience(annees int) void
    +listerAffectations() Affectation[]
  }

  class Match {
    -int id
    -string equipeDomicile
    -string equipeExterieur
    -string stade
    -string villeHote
    -date dateMatch
    -string phase
    +getResume() string
    +estTermine() bool
    +listerArbitres() Arbitre[]
    +affecterArbitre(arbitre Arbitre, role string) Affectation
    +changerStade(stade string) void
  }

  class Affectation {
    -int id
    -int arbitreId
    -int matchId
    -string role
    +getArbitre() Arbitre
    +getMatch() Match
    +changerRole(role string) void
    +annuler() void
    +valider() bool
  }

  Arbitre "1" --> "0..*" Affectation : recoit
  Match "1" --> "0..*" Affectation : contient